<resources>
    <string name="app_name">Zeolr</string>
    <string name="company_about">Zeolr Technologies is a startup based out of New Delhi, India. The company was incorporated in Year 2016 and aims to add values to existing medical and healthcare products by integrating useful and affordable technologies.</string>
    <string name="for_more_info">For more info., visit : </string>
    <string name="company_website">http://zeolr.com/</string>
    <string name="product_heading">Products</string>
    <string name="product_description">Zeolr’s first product, RespirON is an asthma &amp; COPD management system. </string>
    <string name="product_website">http://respiron.in/</string>
    <string name="investor_heading">Investor</string>
    <string name="investor_description">Zeolr Technologies in the year 2016 received a pre-seed investment from Centre of Innovation Incubation Entrepreneurship, IIM - Ahmedabad.</string>
    <string name="contact_heading">Contact Details</string>
    <string name="address_label">Address</string>
    <string name="company_address">314, Vishal Tower, Janakpuri District Center, Delhi - 110058</string>
    <string name="phone_label">Phone</string>
    <string name="company_phone">+918802779344</string>
    <string name="website_label">Website</string>
    <string name="email_label">Email</string>
    <string name="company_email">ajay@zeolr.com</string>
    <string name="company_logo_image_description">Company Logo Image</string>
    <string name="respiron_product_photo_description">RespirON Product photo</string>

</resources>
